# wireframe

./: .gitignore  CMakeLists.txt  Makefile  README.md  norme.txt
.github/workflows/: ccpp.yml
app/: CMakeLists.txt
core/: CMakeLists.txt  camera.c  camera.h  errors.c  errors.h  line_clipping.c  line_clipping.h  line_drawing.c  line_drawing.h  map_loader.c  map_preprocess.c  map_preprocess.h  map_reader.c  map_reader.h  renderer.c  renderer.h  renderer_debug.c  renderer_update.c
libft/: CMakeLists.txt  Makefile  array.c  array.h  ft_atoi.c  ft_is_space.c  ft_memchr.c  ft_memcpy.c  ft_memzero.c  ft_putendl.c  ft_realloc.c  ft_strlen.c  ft_strndup.c  get_next_line.c  get_next_line.h  libft.h  mat3.c  mat3.h  mat3_part2.c  mat4.c  mat4.h  mat4_projections.c  rgb.c  rgb.h  vec3.c  vec3.h  vec3_part2.c  vector.c  vector.h
minilibx_macos/: Makefile  mlx.h  mlx_new_window.h  mlx_new_window.m
mlx_gui/: CMakeLists.txt  main.c  mlx_gui.c  mlx_gui.h  mlx_keyboard.c
sdl_gui/: CMakeLists.txt  main.c  sdl_gui.c  sdl_gui.h  sdl_keyboard.c
